feat: implement file upload and retrieval API with encryption
- Added file upload functionality with encryption using AES-256-GCM.
- Created API routes for uploading and retrieving user files.
- Integrated SSH transfer service for secure file storage.
- Implemented user authentication and session management.
- Developed frontend components for file upload and display.
- Added user registration and login forms.
- Created a dashboard for users to manage their files.
- Implemented error handling and user feedback for file operations.
- Established MongoDB models for User and File with necessary validations.

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
